methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:14: error: ':' expected but ',' found.
def makeX(x,y) = {
           ^PictureMono1:25: error: identifier expected but '}' found.
}
^